--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [build-system]
-requires = ["flit_core >=2,<3"]
+requires = ["flit_core >=2,<3", "pandas", "taxonomy"]
 build-backend = "flit_core.buildapi"
 
 [tool.flit.metadata]
@@ -7,4 +7,19 @@ module = "gather_to_opal"
 author = "Luiz Irber"
 author-email = "sourmash@luizirber.org"
 home-page = "https://github.com/dib-lab/2019-12-12-sourmash_viz"
+description-file = "README.md"
 classifiers = ["License :: OSI Approved :: BSD License"]
+requires = [
+  "pandas >= 1.0.0",
+  "taxonomy >= 0.4.1",
+]
+
+[tool.flit.metadata.requires-extra]
+testing = [
+    "pytest >= 4.0.0, <6",
+    "pytest-cov >= 2.5.1, <3",
+    "flaky >= 3.4.0, < 4"
+]
+
+[tool.flit.scripts]
+gather-to-opal = "gather_to_opal:main"
